--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+## compiler
+*__pycache__/
+*pyc
+
+
 ## environment
 */RSP/
 
@@ -15,6 +20,8 @@ rnaseqpipe/rnaseqpipe/scripts/__pycache__/*
 rnaseqpipe/rnaseqpipe/modules/__pycache__/*
 rnaseqpipe/rnaseqpipe/config/__pycache__/*
 
-rnaseqpipe/rnaseqpipe/modules/__pycache__/config.cpython-38.pyc
-rnaseqpipe/rnaseqpipe/modules/__pycache__/prep.cpython-38.pyc
-
+## example and toy dataset
+example/
+toy_dataset/newnames.csv
+toy_dataset/reads/
+toy_dataset/rename.sh
