--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 *pyc
 
 ## environment
-*/RSP/
+*/RSP_env/
 
 ## eclipse
 .project
@@ -21,7 +21,6 @@ rnaseqpipe/rnaseqpipe/modules/__pycache__/*
 rnaseqpipe/rnaseqpipe/config/__pycache__/*
 
 ## example and toy dataset
-example/
 toy_dataset/newnames.csv
 toy_dataset/reads/
 toy_dataset/rename.sh
