--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ rnaseqpipe/rnaseqpipe/modules/__pycache__/*
 rnaseqpipe/rnaseqpipe/config/__pycache__/*
 
 ## example and toy dataset
+example/toyDataset
 toy_dataset/newnames.csv
 toy_dataset/reads/
 toy_dataset/rename.sh
