--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,5 @@ RSP/RSP/config/__pycache__/*
 example/toyDataset
 toy_dataset/newnames.csv
 toy_dataset/reads/
+toy_dataset/reference
 toy_dataset/rename.sh
