--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@ RSP/RSP/config/__pycache__/*
 example/
 toy_dataset/newnames.csv
 toy_dataset/reads/
+toy_dataset/ref
 toy_dataset/reference
 toy_dataset/rename.sh
