--- a/RSP_pip/devel/conda/environment.yml
+++ b/RSP_pip/devel/conda/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - brotli-bin=1.0.9=h166bdaf_8
   - brotlipy=0.7.0=py311hd4cff14_1005
   - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2022.9.24=ha878542_0
+  - ca-certificates=2023.7.22=hbcca054_0
   - cairo=1.16.0=ha61ee94_1014
   - cffi=1.15.1=py311h409f033_2
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
@@ -38,6 +38,7 @@ dependencies:
   - giflib=5.2.1=h36c2ea0_2
   - graphite2=1.3.13=h58526e2_1001
   - harfbuzz=5.3.0=h418a68e_0
+  - hisat2=2.2.1=hdbdd923_6
   - humanfriendly=10.0=py311h38be061_4
   - icu=70.1=h27087fc_0
   - idna=3.4=pyhd8ed1ab_0
@@ -86,9 +87,10 @@ dependencies:
   - numpy=1.23.5=py311h7d28db0_0
   - openjdk=17.0.3=hafdced1_4
   - openjpeg=2.5.0=h7d73246_1
-  - openssl=3.0.7=h166bdaf_0
+  - openssl=3.1.2=hd590300_0
   - packaging=21.3=pyhd8ed1ab_0
   - pcre2=10.40=hc3806b6_0
+  - perl=5.32.1=4_hd590300_perl5
   - pip=22.3.1=pyhd8ed1ab_0
   - pixman=0.40.0=h36c2ea0_0
   - pthread-stubs=0.4=h36c2ea0_1001
@@ -105,10 +107,13 @@ dependencies:
   - requests=2.28.1=pyhd8ed1ab_1
   - rich=12.6.0=pyhd8ed1ab_0
   - rich-click=1.5.2=pyhd8ed1ab_0
+  - samtools=1.1=h50ea8bc_8
   - setuptools=65.5.1=pyhd8ed1ab_0
   - simplejson=3.18.0=py311hd4cff14_0
   - six=1.16.0=pyh6c4a22f_0
   - spectra=0.0.11=py_1
+  - star=2.7.10b=h9ee0642_0
+  - subread=2.0.6=he4a0461_0
   - tk=8.6.12=h27826a3_0
   - trimmomatic=0.39=hdfd78af_2
   - typing_extensions=4.4.0=pyha770c72_0
@@ -137,32 +142,32 @@ dependencies:
   - zlib=1.2.13=h166bdaf_4
   - zstd=1.5.2=h6239696_4
   - pip:
-    - biopython==1.80
-    - bleach==5.0.1
-    - case-insensitive-dictionary==0.2.1
-    - certifi==2022.9.24
-    - docutils==0.19
-    - dypylib==0.0.6.1
-    - hcgb==0.5.5
-    - importlib-metadata==5.0.0
-    - jaraco-classes==3.2.3
-    - jeepney==0.8.0
-    - keyring==23.11.0
-    - more-itertools==9.0.0
-    - pandas==1.5.1
-    - patool==1.12
-    - pillow==9.3.0
-    - pkginfo==1.8.3
-    - pyper==1.1.2
-    - pytz==2022.6
-    - readme-renderer==37.3
-    - requests-toolbelt==0.10.1
-    - rfc3986==2.0.0
-    - rnaseqpipe==0.0.5
-    - secretstorage==3.3.3
-    - termcolor==2.1.1
-    - twine==4.0.1
-    - urllib3==1.26.12
-    - webencodings==0.5.1
-    - wget==3.2
-    - xlsxwriter==3.0.3
+      - biopython==1.80
+      - bleach==5.0.1
+      - case-insensitive-dictionary==0.2.1
+      - certifi==2022.9.24
+      - docutils==0.19
+      - dypylib==0.0.6.1
+      - hcgb==0.5.5
+      - importlib-metadata==5.0.0
+      - jaraco-classes==3.2.3
+      - jeepney==0.8.0
+      - keyring==23.11.0
+      - more-itertools==9.0.0
+      - pandas==1.5.1
+      - patool==1.12
+      - pillow==9.3.0
+      - pkginfo==1.8.3
+      - pyper==1.1.2
+      - pytz==2022.6
+      - readme-renderer==37.3
+      - requests-toolbelt==0.10.1
+      - rfc3986==2.0.0
+      - rnaseqpipe==0.0.5
+      - secretstorage==3.3.3
+      - termcolor==2.1.1
+      - twine==4.0.1
+      - urllib3==1.26.12
+      - webencodings==0.5.1
+      - wget==3.2
+      - xlsxwriter==3.0.3
